@@ -1,9 +1,9 @@
 Package: Matrix
 Version: 0.99875-2
-Date: 2007-05-21
+Date: 2007-05-22
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
-Maintainer: <Matrix-authors@R-project.org>
+Maintainer: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
     operations on them using Lapack, CSparse and CHOLMOD
 Depends: R (>= 2.5.0), stats, methods, utils, lattice
